--- a/VotingPCNew/slides/Slide2_Vote.xaml
+++ b/VotingPCNew/slides/Slide2_Vote.xaml
@@ -25,7 +25,7 @@
                 HorizontalScrollBarVisibility="Auto">
                 <materialDesign:Card Margin="10" Height="56"
                     Width="{Binding ActualWidth, ElementName=votePanel, Mode=OneWay}">
-                    <VirtualizingStackPanel Orientation="Horizontal"
+                    <VirtualizingStackPanel Orientation="Horizontal" Name="votePanel"
                         Margin="10 4" HorizontalAlignment="Center">
                         <VirtualizingStackPanel.LayoutTransform>
                             <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
@@ -34,7 +34,7 @@
                 </materialDesign:Card>
             </ScrollViewer>
             <ScrollViewer HorizontalScrollBarVisibility="Disabled"
-                VerticalScrollBarVisibility="Auto" Grid.Row="1">
+                VerticalScrollBarVisibility="Auto" Grid.Row="1" VerticalAlignment="Center">
                 <VirtualizingStackPanel Grid.Column="0" Orientation="Vertical">
                     <TextBlock Text="PHIẾU BẦU CỬ"
                         HorizontalAlignment="Center"
@@ -44,13 +44,13 @@
                         HorizontalAlignment="Center" FontSize="56"/>
                     <TextBlock Text="Chọn n người" HorizontalAlignment="Center" 
                         FontSize="50" FontWeight="Normal" Margin="15 0 15 15"/>
-                    <Button Content="Hoàn tất" Background="#C02F1D" 
-                        materialDesign:ShadowAssist.ShadowDepth="Depth2"
-                        Style="{StaticResource MaterialDesignRaisedButton}"
-                        Width="200" Height="60" Margin="50"
-                        FontSize="30" BorderBrush="#C02F1D"/>
                 </VirtualizingStackPanel>
             </ScrollViewer>
+            <Button Content="Hoàn tất" Background="#C02F1D" 
+                materialDesign:ShadowAssist.ShadowDepth="Depth2"
+                Style="{StaticResource MaterialDesignRaisedButton}"
+                Width="200" Height="60" Margin="0 30 0 50" Grid.Row="2"
+                FontSize="30" BorderBrush="#C02F1D"/>
         </Grid>
         <ScrollViewer VerticalScrollBarVisibility="Auto" 
             Grid.Column="1" HorizontalScrollBarVisibility="Disabled">
@@ -58,7 +58,7 @@
                 Width="{Binding ActualWidth, ElementName=voteStack, Mode=OneWay}"
                 Height="{Binding ActualHeight, ElementName=voteStack, Mode=OneWay}"
                 materialDesign:ShadowAssist.ShadowDepth="Depth4">
-                <VirtualizingStackPanel Orientation="Vertical"
+                <VirtualizingStackPanel Orientation="Vertical" Name="voteStack"
                     HorizontalAlignment="Left" VerticalAlignment="Center"/>
             </materialDesign:Card>
         </ScrollViewer>
