--- a/AsyncDialog/TextDialog.xaml
+++ b/AsyncDialog/TextDialog.xaml
@@ -5,7 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:local="clr-namespace:AsyncDialog"
-    mc:Ignorable="d" d:DesignWidth="450" MinWidth="300" MaxWidth="800"
+    mc:Ignorable="d" d:DesignWidth="560" MinWidth="460" MaxWidth="800"
+    d:Background="White"
     DataContext="{Binding Mode=OneWay, RelativeSource={RelativeSource Mode=Self}}">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -17,16 +18,21 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <UserControl.LayoutTransform>
-        <ScaleTransform ScaleX="1.5" ScaleY="1.5" x:Name="scale" x:FieldModifier="private"/>
+        <ScaleTransform ScaleX="1" ScaleY="1" x:Name="scale" x:FieldModifier="private"/>
     </UserControl.LayoutTransform>
-    <StackPanel Margin="32">
-        
-        <TextBlock FontSize="20" FontFamily="Quicksand" FontWeight="Medium" x:Name="textBox" 
+    <StackPanel Margin="0 10 0 0">
+        <!-- Title -->
+        <TextBlock FontSize="20" FontFamily="Roboto" FontWeight="Medium" x:Name="titleBox" Margin="24 10"
             TextWrapping="Wrap" d:Text="Thông báo mẫu: Lorem ipsum" x:FieldModifier="private"/>
-        <Button Margin="0 16 0 0" FocusVisualStyle="{x:Null}" x:FieldModifier="private"
-            FontFamily="Quicksand" FontWeight="Medium" x:Name="button"
+        <!-- Body text -->
+        <TextBlock FontSize="16" FontFamily="Roboto" FontWeight="Normal" x:Name="textBox"
+            TextWrapping="Wrap" x:FieldModifier="private" Margin="24 10 24 24"
+            d:Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."/>
+        <!-- Button -->
+        <Button Margin="8" FocusVisualStyle="{x:Null}" x:FieldModifier="private"
+            FontFamily="Roboto" FontWeight="Medium" x:Name="button" IsDefault="True"
             Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
-            HorizontalAlignment="Right" MinWidth="64"
+            HorizontalAlignment="Right" MinWidth="64" FontSize="14"
             Content="OK" Style="{StaticResource MaterialDesignFlatButton}"/>
     </StackPanel>
 </UserControl>
