--- a/AsyncDialog/LoadingDialog.xaml
+++ b/AsyncDialog/LoadingDialog.xaml
@@ -3,9 +3,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:local="clr-namespace:AsyncDialog" mc:Ignorable="d"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    DataContext="{Binding Mode=OneWay, RelativeSource={RelativeSource Mode=Self}}">
+    xmlns:local="clr-namespace:AsyncDialog" mc:Ignorable="d" d:Background="White"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <UserControl.Resources>
         <ResourceDictionary>
             <!--Material Design theme-->
@@ -15,6 +14,9 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
+    <UserControl.LayoutTransform>
+        <ScaleTransform x:Name="scale" x:FieldModifier="private" />
+    </UserControl.LayoutTransform>
     <ProgressBar Margin="32" HorizontalAlignment="Center" IsIndeterminate="True" IsTabStop="False"
         Style="{StaticResource MaterialDesignCircularProgressBar}" FocusVisualStyle="{x:Null}">
         <ProgressBar.LayoutTransform>
