Move VotingPCNew to .NET 6 and refactor

--- a/VoteCounter/Slide3_Detail.xaml
+++ b/VoteCounter/Slide3_Detail.xaml
@@ -20,7 +20,7 @@
                        Margin="0 8 0 0" Grid.Row="0" x:Name="titleTextBox" HorizontalAlignment="Center"/>
         </StackPanel>
 
-        <!--TODO: Add "Back" button here-->
+        <!--TODO: Change style of "Back" button, this looks bad-->
         <Button ToolTip="Back" Style="{StaticResource MaterialDesignIconForegroundButton}" Margin="24 12 0 12" Grid.Row="0"
 		        x:Name="backButton" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Button.LayoutTransform>
