--- a/VoteCounter/Slide2_Overview.xaml
+++ b/VoteCounter/Slide2_Overview.xaml
@@ -4,14 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VoteCounter"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" d:Background="White"
              d:DesignHeight="720" d:DesignWidth="1280">
-    <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled"
+    <ScrollViewer HorizontalScrollBarVisibility="Disabled"
                   VerticalScrollBarVisibility="Auto">
-        <StackPanel Margin="72 16" x:Name="OverviewStackPanel">
-            <TextBlock Text="Kết quả bầu cử - Tổng quan"
-                       Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Center"
+        <StackPanel Margin="72 16" x:Name="overviewStackPanel">
+            <TextBlock Text="Kết quả bầu cử - Tổng quan" HorizontalAlignment="Center"
                        Margin="0 20 0 24" FontSize="42" FontWeight="SemiBold"/>
             <d:StackPanel>
                 <local:DisplayCard Margin="0 16 56 16"/>
