--- a/VoteCounter/Slide1_Landing.xaml
+++ b/VoteCounter/Slide1_Landing.xaml
@@ -23,7 +23,7 @@
                    Grid.ColumnSpan="3" Grid.Row="0"
                    HorizontalAlignment="Center"
                    FontSize="48" Margin="36"/>
-        <Button x:Name="SingleFileButton" Style="{StaticResource MaterialDesignOutlinedButton}"
+        <Button x:Name="singleFileButton" Style="{StaticResource MaterialDesignOutlinedButton}"
                 Height="142" Grid.Row="1" Grid.Column="0" Margin="24 16" Width="200">
             <StackPanel Orientation="Vertical">
                 <materialDesign:PackIcon Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}"
@@ -31,9 +31,9 @@
                 <TextBlock Text="File đơn" FontSize="32" Margin="0 12 0 0"/>
             </StackPanel>
         </Button>
-        <Button x:Name="MultipleFileButton" Style="{StaticResource MaterialDesignOutlinedButton}"
-                Height="{Binding ActualHeight, ElementName=SingleFileButton, Mode=OneWay}"
-                Width="{Binding ActualWidth, ElementName=SingleFileButton, Mode=OneWay}"
+        <Button x:Name="multipleFileButton" Style="{StaticResource MaterialDesignOutlinedButton}"
+                Height="{Binding ActualHeight, ElementName=singleFileButton, Mode=OneWay}"
+                Width="{Binding ActualWidth, ElementName=singleFileButton, Mode=OneWay}"
                 Grid.Column="1" Grid.Row="1" Margin="24 8">
             <StackPanel Orientation="Vertical">
                 <materialDesign:PackIcon Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}"
@@ -41,9 +41,9 @@
                 <TextBlock Text="Nhiều file" FontSize="32" Margin="0 12 0 0"/>
             </StackPanel>
         </Button>
-        <Button x:Name="FolderButton" Style="{StaticResource MaterialDesignOutlinedButton}"
-                Height="{Binding ActualHeight, ElementName=SingleFileButton, Mode=OneWay}"
-                Width="{Binding ActualWidth, ElementName=SingleFileButton, Mode=OneWay}"
+        <Button x:Name="folderButton" Style="{StaticResource MaterialDesignOutlinedButton}"
+                Height="{Binding ActualHeight, ElementName=singleFileButton, Mode=OneWay}"
+                Width="{Binding ActualWidth, ElementName=singleFileButton, Mode=OneWay}"
                 Grid.Column="2" Grid.Row="1" Margin="24 8">
             <StackPanel Orientation="Vertical">
                 <materialDesign:PackIcon Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}"
