--- a/VotingDatabaseMaker/PasswordDialog.xaml
+++ b/VotingDatabaseMaker/PasswordDialog.xaml
@@ -9,8 +9,8 @@
              d:DesignHeight="220" Width="460"
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <StackPanel Margin="32">
-        <TextBlock Text="Mã hóa file cơ sở dữ liệu" FontSize="20" Margin="6 0 6 12" x:Name="Title"/>
-        <PasswordBox x:Name="PasswordTextBox" Margin="6" MaxLength="32"
+        <TextBlock Text="Mã hóa file cơ sở dữ liệu" FontSize="20" Margin="6 0 6 12" x:Name="title"/>
+        <PasswordBox x:Name="passwordTextBox" Margin="6" MaxLength="32"
                      materialDesign:HintAssist.Hint="Mật khẩu"
                      materialDesign:HintAssist.HelperText="Có thể để trống nếu không đặt mật khẩu"
                      Style="{StaticResource MaterialDesignFloatingHintPasswordBox}">
